--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@iconify-icons/simple-icons": "^1.1.10",
+    "@iconify/react": "^1.1.3",
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-plugin-sitemap": "^2.12.0",
